cmake_minimum_required(VERSION 4.2)
project(KingC C)

set(CMAKE_C_STANDARD 99)

add_executable(KingC main.c
        "King Chapter 2/C2P2.c"
        "King Chapter 2/Dimension.c"
        "King Chapter 2/Chapter 2 PP/q1.c"
        "King Chapter 2/Chapter 2 PP/q2.c"
        "King Chapter 2/Chapter 2 PP/q3.c"
        "King Chapter 2/Chapter 2 PP/q4.c"
        "King Chapter 2/Chapter 2 PP/q5.c"
        "King Chapter 2/Chapter 2 PP/q6.c"
        "King Chapter 2/Chapter 2 PP/q7.c"
        "King Chapter 2/Chapter 2 PP/q8.c"
        "King chapter 3/FormattingIO.c"
        "King chapter 3/King Chapter 3 PP/q1.c"
        "King chapter 3/King Chapter 3 PP/q2.c"
        "King chapter 3/King Chapter 3 PP/q3.c"
        "King chapter 3/King Chapter 3 PP/q4.c"
        "King chapter 3/King Chapter 3 PP/q5.c"
        "King chapter 3/King Chapter 3 PP/q6.c"
)
